# my_robot_description

./: CMakeLists.txt  README.md  README_EN.md  package.xml
config/variants/nero_with_grinder/: workcell_plugins.yaml
config/workcells/blade_polishing/: calibration.yaml
launch/: display.launch.py  display_urdf.launch.py  display_xacro.launch.py  gazebo.launch.py
meshes/end_effectors/grinder/: measurement
meshes/workcells/blade_polishing/: base_blender.STL  叶片车模拟_blender.STL
nero/config/: joint_names_nero_description.yaml
nero/launch/: display.launch.py  display_xacro.launch.py
nero/urdf/: nero_description.urdf  nero_with_gripper_description.xacro  nero_with_gripper_flange_description.xacro  nero_with_revo2_flange_description.xacro
rviz/robots/nero/: piper_ctrl.rviz
srdf/robots/nero/: nero_robot.srdf
srdf/variants/nero_with_grinder/: nero_with_grinder_tesseract.srdf
urdf/end_effectors/grinder/: grinder_with_camera.xacro
urdf/robots/nero/: nero_description.urdf  nero_tesseract.xacro  nero_with_gripper_description.xacro  nero_with_gripper_flange_description.xacro  nero_with_left_revo2_description.xacro  nero_with_revo2_flange_description.xacro  nero_with_right_revo2_description.xacro
urdf/variants/nero_with_grinder/: nero_with_grinder.urdf  nero_with_grinder.xacro  nero_with_grinder_tesseract.urdf
