cmake_minimum_required(VERSION 3.8)
project(my_robot_description)

find_package(ament_cmake REQUIRED)

foreach(dir urdf meshes srdf config launch rviz)
  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${dir}")
    install(DIRECTORY "${dir}"
      DESTINATION share/${PROJECT_NAME}
    )
  endif()
endforeach()

ament_package()
