<?xml version="1.0"?>
<package format="3">
  <name>agx_arm_description</name>
  <version>1.0.0</version>
  <description>URDF and mesh files for AgileX robotic arms (NERO, Piper, Revo2).</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
