<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>1.0.0</version>
  <description>Robot, end-effector, and workcell descriptions for this workspace.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
